--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           you are to me and to everyone lucky enough to know you.
         </p>
         <p class="text-xl font-semibold text-pink-600 mb-8">
-          Happy Birthday, my crush! ❤️
+          Happy Birthday, ️Soundu! ✨
         </p>
         <button class="btn" id="confetti-btn">Celebrate!</button>
         <p class="mt-8 text-gray-500">Woven with a smile, built with heart — all for you, Soundu✨</p>
@@ -451,4 +451,5 @@
 </body>
 
 </html>
+
 
