--- a/hbd/index.html
+++ b/hbd/index.html
@@ -190,7 +190,7 @@
       <!-- Step 2: Birthday Message -->
       <div class="step" id="step2">
         <div class="emoji">🎉</div>
-        <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gradient">Happy Birthday Soundu!</h2>
+        <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gradient">Happy Birthday Soundarya!</h2>
         <p class="text-lg text-gray-700 mb-6">
           On your special day, I want you to know how amazing you are.
   Your smile brightens my world, your laughter is my favorite melody,
@@ -254,10 +254,10 @@
           you are to me and to everyone lucky enough to know you.
         </p>
         <p class="text-xl font-semibold text-pink-600 mb-8">
-          Happy Birthday, my crush! ❤️
+          Happy Birthday, Soundarya!✨
         </p>
         <button class="btn" id="confetti-btn">Celebrate!</button>
-        <p class="mt-8 text-gray-500">Woven with a smile, built with heart — all for you, Soundu✨</p>
+        <p class="mt-8 text-gray-500">Woven with a smile, built with heart — all for you, Soundarya✨</p>
       </div>
     </div>
   </div>
