--- a/index.html
+++ b/index.html
@@ -1,6 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
+
+
+<!-- PASSWORD PROTECTION OVERLAY -->
+<div id="password-gate" style="
+  position:fixed; inset:0;
+  display:flex; flex-direction:column; justify-content:center; align-items:center;
+  background-color:#000; color:#fff; font-family:'Poppins',sans-serif;
+  z-index:999; text-align:center; gap:1rem;
+">
+  <h2 style="font-weight:600;">Enter Password</h2>
+  <input id="password-input" type="password" placeholder="Enter password..." style="
+    padding:0.8rem 1rem; border:none; border-radius:50px;
+    outline:none; font-size:1rem; width:220px; text-align:center;
+  ">
+  <button id="password-btn" style="
+    padding:0.7rem 1.6rem; border:none; border-radius:50px;
+    background:#fff; color:#000; font-weight:600; cursor:pointer;
+  ">Unlock</button>
+  <p id="error-msg" style="color:#888; font-size:0.9rem; height:1rem;"></p>
+</div>
+
+<script>
+  const passwordGate = document.getElementById('password-gate');
+  const passwordInput = document.getElementById('password-input');
+  const passwordBtn = document.getElementById('password-btn');
+  const errorMsg = document.getElementById('error-msg');
+
+  // Set your password here
+  const correctPassword = "soundu";
+
+  passwordBtn.addEventListener('click', () => {
+    if (passwordInput.value === correctPassword) {
+      passwordGate.style.opacity = '0';
+      passwordGate.style.transition = 'opacity 0.6s ease';
+      setTimeout(() => passwordGate.style.display = 'none', 600);
+    } else {
+      errorMsg.textContent = "Wrong password, try again 😅";
+      passwordInput.value = "";
+    }
+  });
+
+  // Allow pressing Enter
+  passwordInput.addEventListener('keypress', e => {
+    if (e.key === 'Enter') passwordBtn.click();
+  });
+</script>
+
+  
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -420,3 +470,4 @@
   </script>
 </body>
 </html>
+
