--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   const errorMsg = document.getElementById('error-msg');
 
   // Set your password here
-  const correctPassword = "soundu";
+  const correctPassword = "28.18";
 
   passwordBtn.addEventListener('click', () => {
     if (passwordInput.value === correctPassword) {
@@ -470,4 +470,5 @@
   </script>
 </body>
 </html>
+
 
