--- a/index.html
+++ b/index.html
@@ -293,6 +293,9 @@
             <img src="5.jpg" alt="memory" style="width:160px;height:160px;object-fit:cover;border-radius:10px;">
             <img src="6.jpg" alt="memory" style="width:160px;height:160px;object-fit:cover;border-radius:10px;">
             <img src="7.jpg" alt="memory" style="width:160px;height:160px;object-fit:cover;border-radius:10px;">
+            <img src="8.jpg" alt="memory" style="width:160px;height:160px;object-fit:cover;border-radius:10px;">
+            <img src="9.jpg" alt="memory" style="width:160px;height:160px;object-fit:cover;border-radius:10px;">
+            <img src="10.jpg" alt="memory" style="width:160px;height:160px;object-fit:cover;border-radius:10px;">
             <img src="sticker1.webp" alt="sticker" style="width:160px;height:160px;object-fit:contain;border-radius:10px;">
           
           </div>
